# SlicerPointSetProcessing

./: CMakeLists.txt  README.md
Data/: ConoProbePoints.vtp
PointSetProcessing/: CMakeLists.txt  README.md
PointSetProcessing/PointSetProcessingCpp/: qSlicerPointSetProcessingCppModule.cxx
PointSetProcessing/PointSetProcessingCpp/Logic/: CMakeLists.txt  vtkSlicerPointSetProcessingCppLogic.cxx  vtkSlicerPointSetProcessingCppLogic.h
PointSetProcessing/PointSetProcessingPy/: PointSetProcessingPy.py
PointSetProcessingCpp/Logic/: CMakeLists.txt  vtkSlicerPointSetProcessingCppLogic.cxx  vtkSlicerPointSetProcessingCppLogic.h
PointSetProcessingPy/: PointSetProcessingPy.py
Projects/: Boost.cmake  Git.cmake  PointSetProcessing.cmake  PoissonReconstruction.cmake  Qt.cmake  Slicer.cmake  Slicer.patch  SlicerPointSetProcessing.cmake  VTK.cmake  zlib.cmake
Projects/ExtraProjects/: CTK.patch  DCMTK.cmake  ITK.cmake  OpenIGTLink.cmake  Subversion.cmake  VTK.cmake  zlib.cmake
SlicerPointSetProcessing/: CMakeLists.txt
SlicerPointSetProcessing/PointSetProcessingCpp/Logic/: CMakeLists.txt
SlicerPointSetProcessing/PointSetProcessingPy/: PointSetProcessingPy.py
SurfaceRecontruction/: CMakeLists.txt  main.cxx
SurfaceRecontruction/Data/: CMakeLists.txt  points.vtk
TestSurfaceRecontruction/: CMakeLists.txt  main.cxx
Testing/: CMakeLists.txt
Testing/PoissonSurfaceRecontruction/: CMakeLists.txt
